--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Minimal Subnet Calculator</title>
+    <script src="GetSubnetMask.js"></script>
+    <script src="DivideSubnets.js"></script>
 </head>
 
 <body>
@@ -17,75 +19,24 @@
             <div class="field">
                 <label class="label">Enter CIDR Notation</label>
                 <div class="control">
-                    <input id="cidrInput" class="input is-link" type="text" placeholder="e.g. 192.168.1.0/24" style="width: 60%; text-align: center;">
+                    <input id="cidrInput" class="input is-link" type="text" placeholder="e.g. 192.168.1.0/24"
+                        style="width: 60%; text-align: center;">
+                </div>
+                <label class="label">Enter Number of Subnets</label>
+                <div class="control">
+                    <input id="cidrInput" class="input is-link" type="number" placeholder="e.g. 7"
+                        style="width: 15%; text-align: center;">
                 </div>
             </div>
 
             <div class="control">
                 <button id="calculateBtn" class="button is-dark">Get Subnet Mask</button>
+                <button id="" class="button is-dark">Get Subnets</button>
             </div>
             <div id="subnetMaskDisplay" class="mt-4">
             </div>
         </div>
     </section>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const subnetMasks = {
-                "0": "0.0.0.0",
-                "1": "128.0.0.0",
-                "2": "192.0.0.0",
-                "3": "224.0.0.0",
-                "4": "240.0.0.0",
-                "5": "248.0.0.0",
-                "6": "252.0.0.0",
-                "7": "254.0.0.0",
-                "8": "255.0.0.0",
-                "9": "255.128.0.0",
-                "10": "255.192.0.0",
-                "11": "255.224.0.0",
-                "12": "255.240.0.0",
-                "13": "255.248.0.0",
-                "14": "255.252.0.0",
-                "15": "255.254.0.0",
-                "16": "255.255.0.0",
-                "17": "255.255.128.0",
-                "18": "255.255.192.0",
-                "19": "255.255.224.0",
-                "20": "255.255.240.0",
-                "21": "255.255.248.0",
-                "22": "255.255.252.0",
-                "23": "255.255.254.0",
-                "24": "255.255.255.0",
-                "25": "255.255.255.128",
-                "26": "255.255.255.192",
-                "27": "255.255.255.224",
-                "28": "255.255.255.240",
-                "29": "255.255.255.248",
-                "30": "255.255.255.252",
-                "31": "255.255.255.254",
-                "32": "255.255.255.255"
-            };
-
-            document.getElementById("calculateBtn").addEventListener("click", function () {
-                const cidrInput = document.getElementById("cidrInput").value.trim();
-                const [ip, cidr] = cidrInput.split('/'); // Separate IP and subnet length
-
-                if (!ip || !cidr || isNaN(cidr)) {
-                    document.getElementById("subnetMaskDisplay").textContent = "Invalid CIDR notation. Please enter in the format 'IP/length'.";
-                    return;
-                }
-
-                const subnetMask = subnetMasks[cidr];
-
-                if (subnetMask) {
-                    document.getElementById("subnetMaskDisplay").textContent = `Subnet Mask for /${cidr}: ${subnetMask}`;
-                } else {
-                    document.getElementById("subnetMaskDisplay").textContent = "CIDR length not found. Please enter a valid CIDR.";
-                }
-            });
-        });
-    </script>
 
 </body>
 
