--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Minimal Subnet Calculator</title>
-    <script src="GetSubnetMask.js"></script>
-    <script src="DivideSubnets.js"></script>
+    <script src="DivideSubnets.js" defer></script> <!-- Ensure JS is loaded after HTML -->
 </head>
 
 <body>
@@ -24,20 +23,25 @@
                 </div>
                 <label class="label">Enter Number of Subnets</label>
                 <div class="control">
-                    <input id="cidrInput" class="input is-link" type="number" placeholder="e.g. 7"
+                    <input id="subnetCountInput" class="input is-link" type="number" placeholder="e.g. 7"
                         style="width: 15%; text-align: center;">
                 </div>
             </div>
 
             <div class="control">
                 <button id="calculateBtn" class="button is-dark">Get Subnet Mask</button>
-                <button id="" class="button is-dark">Get Subnets</button>
+                <button id="divideSubnetsBtn" class="button is-dark">Get Subnets</button>
             </div>
+
             <div id="subnetMaskDisplay" class="mt-4">
+                <!-- Display subnet mask here -->
+            </div>
+            
+            <div id="subnetsDisplay" class="mt-4">
+                <!-- Display subnets here -->
             </div>
         </div>
     </section>
-
 </body>
 
 </html>
