--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Minimal Subnet Calculator</title>
-    <script src="DivideSubnets.js" defer></script> <!-- Ensure JS is loaded after HTML -->
+    <script src="./js/DivideSubnets.js" defer></script> 
+    <script src="./js/GetSubnetMask.js" defer></script> 
+    <script src="./js/TableDisplay.js" defer></script> 
 </head>
 
 <body>
@@ -34,11 +36,10 @@
             </div>
 
             <div id="subnetMaskDisplay" class="mt-4">
-                <!-- Display subnet mask here -->
+                
             </div>
             
             <div id="subnetsDisplay" class="mt-4">
-                <!-- Display subnets here -->
             </div>
         </div>
     </section>
